# the-home-lab

./: .gitignore  CLAUDE.md  README.md  devices.md  verify.txt
.claude/agents/: research-analyzer.md  research-director.md  research-researcher.md
app/: CLAUDE.md  README.md
app/.claude/agents/: documentation-writer.md
app/control-center/: package-lock.json  package.json
app/control-center/src-tauri/: Cargo.toml  tauri.conf.json
app/docs/: README.md  architecture.md  getting-started.md
app/docs/components/: README.md  file-browser.md  tailscale.md  terminal.md
app/docs/design/: README.md  visual-identity.md
app/docs/guides/: README.md  adding-devices.md  getting-started.md
app/node-rpc/: Cargo.toml  build.rs
app/node-rpc/protobufs/: node.proto
app/node-rpc/src/: client.rs  server.rs
app/node-tui/: .gitignore  Cargo.toml  build.rs
app/node-tui/src/: app.rs  event.rs  grpc.rs  main.rs  ui.rs
docs/architecture/: README.md
docs/conventions/: README.md
docs/development/: README.md
docs/infrastructure/: README.md
docs/research/: README.md
docs/research/home-labs/: 00-executive-summary.md  01-popular-projects-2025-2026.md  02-technology-stacks.md  03-networking-vlans.md  04-remote-access.md  05-use-cases.md  README.md
docs/research/lightweight-desktop-frameworks/: covered-topics.md  final-recommendations.md  manifest.json  (+1 more)
ideas/: The evolving network.md
personal-librarian/: CLAUDE.md
personal-librarian/guides/: obsidian-backup-guide.md  obsidian-sync-guide.md
research/: CLAUDE.md
research/smart-lights/: network-discovery-report.md
(+47 files in other folders)
