[package]
name = "node-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
sysinfo = "0.38.1"
tokio-stream = "0.1.18"

[build-dependencies]
tonic-prost-build = "0.14"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

